Fixes layout issues and first try with endless text animation.

--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -3,14 +3,19 @@
     align-items: center;
     flex-direction: column;
     align-content: flex-start;
+    overflow: hidden;
 }
 
-.say-hello-btn {
+.contact-btn {
     text-decoration: none;
     color: var(--text-color);
     padding: 0.5rem 0.5rem;
-    background: var(--dark);
-    border: var(--accent-1) solid;
+    color: var(--accent-2)
+}
+
+.email-container {
+    display: flex;
+    flex-direction: column;
 }
 
 
