--- a/src/index.css
+++ b/src/index.css
@@ -67,18 +67,16 @@ h2 {
 
 article {
   display: flex;
-  min-width: 50vw;
+  width: 50vw;
   align-items: flex-start;
   flex-direction: column;
   font-family: 'SuisseIntl-Thin';  
   font-size: var(--fs-small);
-  line-height: 3rem;
-  background: var(--dark);
+  line-height: 2.25rem;
   padding-left: 3rem;
   padding-top: 1.5rem;
   padding-right: 3rem;
   padding-bottom: 1.5rem;
-  border-radius: var(--border-radius);
   margin-bottom: 3rem;
 }
 
